test/mutation_analysis/s0392_is_subsequence/hafis/o3/mutants/6/result.txt
./test/mutation_analysis/s0392_is_subsequence/hafis/o3/mutants/6/Solution.java:24: error: unreachable statement
        while (false) {
                      ^
1 error
